--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,6 @@
 #to deploy: remove the application and version lines
-application: lasanfound
-version: 1
+#application: lasanfound
+#version: 1
 runtime: python27
 api_version: 1
 threadsafe: true
